src/test/deca/context/invalid/class/62-doubleDeclParam1.deca
/* Description:
    teste la regle (3.12) de la vérification contextuelles
    Double Déclaration de paramètres

    Historique:
      cree le 21/01/2020
*/

class A {
  int methode(int a, float a){} // double declaration de a
}
